Did javascript changes and fixed up my css

--- a/product.html
+++ b/product.html
@@ -21,34 +21,9 @@
       </div>
     </header>
     <main>
-      <img src="imgs/pants.webp" />
-      <section class="content">
-        <section class="info">
-          <h2>Product Information</h2>
-          <p>DKK 800,-</p>
-          <dl>
-            <dt>Model name</dt>
-            <dd>Sahara Team India Fanwear Round Neck Jersey</dd>
-            <dt>Color</dt>
-            <dd>Black</dd>
-          </dl>
-        </section>
-        <section class="purchase-container">
-          <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-          <p>Nike Pants</p>
-          <form>
-            <label>
-              <select name="Size">
-                <option>S</option>
-                <option>M</option>
-                <option>L</option>
-                <option>XL</option>
-              </select>
-            </label>
-          </form>
-          <button>Add to basket</button>
-        </section>
-      </section>
+      <div class="product"></div>
     </main>
+
+    <script src="product.js"></script>
   </body>
 </html>
