--- a/productlist.html
+++ b/productlist.html
@@ -34,7 +34,7 @@
           </article>
           <article class="product">
             <a href="product.html"
-              ><img src="imgs/pants.webp" alt="Product pants"
+              ><img src="imgs/shirt.webp" alt="Product pants"
             /></a>
             <p>Sahara Team India Fanwear Round Neck Jersey</p>
             <p class="tag">Pants | Nike</p>
@@ -42,7 +42,7 @@
           </article>
           <article class="product">
             <a href="product.html"
-              ><img src="imgs/pants.webp" alt="Product pants"
+              ><img src="imgs/tshirt.webp" alt="Product pants"
             /></a>
             <p>Sahara Team India Fanwear Round Neck Jersey</p>
             <p class="tag">Pants | Nike</p>
