added js and made so each product container takes you to the clothes/item you're searching for

--- a/index.html
+++ b/index.html
@@ -20,16 +20,25 @@
         </ul>
       </div>
     </header>
+    <h1>Categories</h1>
     <section class="categories-section">
-      <h1>Categories</h1>
-      <div class="categories-list">
-        <p class="list"><a href="productlist.html">Accesories</a></p>
-        <p class="list"><a href="productlist.html">Apparel</a></p>
-        <p class="list"><a href="productlist.html">Footwear</a></p>
-        <p class="list"><a href="productlist.html">Free Items</a></p>
-        <p class="list"><a href="productlist.html">Personal Care</a></p>
-        <p class="list"><a href="productlist.html">Sporting Goods</a></p>
-      </div>
+      <!-- <div class="categories-list">
+        <a class="list" href="productlist.html?categories=Accessories"
+          >Accesories</a
+        >
+        <a class="list" href="productlist.html?categories=Apparel">Apparel</a>
+        <a class="list" href="productlist.html?categories=Footwear">Footwear</a>
+        <a class="list" href="productlist.html?categories=Free Items"
+          >Free Items</a
+        >
+        <a class="list" href="productlist.html?categories=Personal Care"
+          >Personal Care</a
+        >
+        <a class="list" href="productlist.html?categories=Sporting Goods"
+          >Sporting Goods</a
+        >
+      </div> -->
     </section>
   </body>
+  <script src="index.js"></script>
 </html>
