--- a/productlist.html
+++ b/productlist.html
@@ -20,45 +20,7 @@
         </ul>
       </div>
     </header>
-    <main>
-      <section class="product-section">
-        <h1>Nike</h1>
-        <div class="product-list">
-          <article class="product">
-            <a href="product.html"
-              ><img src="imgs/pants.webp" alt="Product pants"
-            /></a>
-            <p>Sahara Team India Fanwear Round Neck Jersey</p>
-            <p class="tag">Pants | Nike</p>
-            <p>DKK 800,-</p>
-          </article>
-          <article class="product">
-            <a href="product.html"
-              ><img src="imgs/shirt.webp" alt="Product pants"
-            /></a>
-            <p>Sahara Team India Fanwear Round Neck Jersey</p>
-            <p class="tag">Pants | Nike</p>
-            <p>DKK 800,-</p>
-          </article>
-          <article class="product">
-            <a href="product.html"
-              ><img src="imgs/tshirt.webp" alt="Product pants"
-            /></a>
-            <p>Sahara Team India Fanwear Round Neck Jersey</p>
-            <p class="tag">Pants | Nike</p>
-            <p>DKK 800,-</p>
-          </article>
-          <article class="product">
-            <a href="product.html"
-              ><img src="imgs/pants.webp" alt="Product pants"
-            /></a>
-            <p>Sahara Team India Fanwear Round Neck Jersey</p>
-            <p class="tag">Pants | Nike</p>
-            <p>DKK 800,-</p>
-          </article>
-        </div>
-      </section>
-    </main>
+    <main></main>
     <script src="productlist.js"></script>
   </body>
 </html>
