added sold out and on sale in the js for the product list and changed few css for it. I also made so that when i click on the product it actually change to the price, name and etc.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </header>
     <h1>Categories</h1>
-    <section class="categories-section">
+    <section class="categories-section categories-list">
       <!-- <div class="categories-list">
         <a class="list" href="productlist.html?categories=Accessories"
           >Accesories</a
