--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <header>
       <a href="index.html"
-        ><img class="logo" src="imgs/Logo.svg" alt="Website logo"
-      /></a>
+        ><div class="logo">
+          <img src="imgs/Logo.svg" alt="Logo" />
+        </div>
+      </a>
       <div>
         <ul>
           <li><a href="index.html">Categories</a></li>
